fix the connection for local host

--- a/storefront/src/main/resources/application.yml
+++ b/storefront/src/main/resources/application.yml
@@ -23,10 +23,10 @@ spring:
         trace: false
         web-allow-others: true
   rabbitmq:
-    host: rabbitmq
+    host: localhost
     port: 5672
-    username: admin
-    password: admin
+    username: guest
+    password: guest
     virtual-host: /
     queue:
       product-change-availability: product.change.availability.queue
